--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
     <div class="container">
         <h1 id="title">Chat</h1>
-        <a href="/" target="_blank">Open another tab to see the chats</a>
+        <a href="/BroadcastChannelAPI" target="_blank">Open another tab to see the chats</a>
         <div id="chat-window" class="chat-window">
         </div>
         <div style="display: flex;">
